--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@jtmorrisbytes/lib",
-  "version": "0.0.5",
-  "description": "the common library functions for this company",
-  "main": "index.js",
+  "name": "lib",
+  "description": "the stub module for @jtmorrisbytes/lib",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:Win": "npm install && .\\build.bat",
+    "publish:Win": "npm run build:win && cd dist && npm login && npm publish"
   },
-  "author": "Jordan Morris",
-  "license": "MIT"
+  "devDependencies": {
+    "typescript": "^3.8.3"
+  }
 }
