--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "the stub module for @jtmorrisbytes/lib",
   "private": true,
   "scripts": {
-    "build:Win": "npm install && .\\build.bat",
+    "build:Win": "npm install && rmdir /s /q dist && .\\node_modules\\.bin\\tsc && copy src\\package.json .\\dist",
     "publish:Win": "npm run build:win && cd dist && npm login && npm publish"
   },
   "devDependencies": {
