--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "jasmine": "^3.5.0",
     "ts-loader": "^7.0.1",
     "webpack-node-externals": "^1.7.2"
   }
