--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonJS",
     "moduleResolution": "node",
     "outDir": "dist",
     "extendedDiagnostics": true,
