--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@jtmorrisbytes/lib",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "description": "the common library functions for this company",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "build && copyFiles"
   },
   "author": "Jordan Morris",
   "license": "MIT"
