--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@jtmorrisbytes/lib",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "the common library functions for this company",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "build && copyFiles"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jordan Morris",
   "license": "MIT"
